# Universal_Template_Manager

./: .gitignore  LICENCE  README.md  pyproject.toml  requirement.txt
src/: app.py
templates/template_example/: template_description.yaml
templates/template_example2/: template_description.yaml
